--- a/sass/product/vtex.product-price.scss
+++ b/sass/product/vtex.product-price.scss
@@ -15,7 +15,7 @@
     &::before {
       content: '%';
       display: block;
-      margin: 2px 0 0 7px;
+      margin: 0.125rem 0 0 0.5rem;
       color: $white;
       font-weight: 400;
       font-size: 16px;
