--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -6,7 +6,8 @@
     [data-specification-name='Premium']::after {
       content: url(https://bricobravo.vtexassets.com/arquivos/ids/155413-22-22?v=637920420622130000&width=75&height=15&aspect=true);
       margin: 24px 0 0 22px;
-      @include mobile {
+
+      @include breakpoint('mobile') {
         margin: 0;
         position: relative;
         top: -30px;
@@ -18,7 +19,8 @@
       position: relative;
       top: -4px;
       left: -4px;
-      @include mobile {
+
+      @include breakpoint('mobile') {
         top: -36px;
         left: 106px;
       }
@@ -44,11 +46,11 @@
         width: 6.5rem;
         margin: 0 0 0 0.25rem;
 
-        @include mobile {
+        @include breakpoint('mobile') {
           margin: 0;
           position: relative;
-          top: -30px;
-          left: 120px;
+          left: 0;
+          top: 6px;
         }
       }
       [data-specification-name='Spedizione gratuita']::before {
@@ -60,10 +62,10 @@
         height: 1.25rem;
         width: 3.25rem;
 
-        @include mobile {
+        @include breakpoint('mobile') {
           position: relative;
-          top: -36px;
-          left: 106px;
+          top: 6px;
+          margin-right: 8px;
         }
       }
       [data-specification-name='Spedizione gratuita']::after {
@@ -74,12 +76,15 @@
         color: $primary-default;
         font-size: $paragraph-medium-regular;
         line-height: 1.25rem;
+        font-weight: 400;
         position: initial;
 
-        @include mobile {
-          position: relative;
-          top: -36px;
-          left: 106px;
+        @include breakpoint('mobile') {
+          position: initial;
+          width: auto;
+          line-height: 1rem;
+          height: 1rem;
+          font-size: $paragraph-small-regular;
         }
       }
     }
@@ -95,6 +100,22 @@
     :global(.vtex-product-price-1-x-savings--savingPercentage) {
       top: 0;
       left: 0;
+
+      @include breakpoint('mobile') {
+        position: absolute;
+        top: 0;
+        left: 1rem;
+        z-index: 2;
+      }
+    }
+
+    :global(.vtex-wish-list-1-x-wishlistIconContainer) {
+      @include breakpoint('mobile') {
+        position: absolute;
+        top: 0;
+        right: 1rem;
+        z-index: 2;
+      }
     }
   }
 
@@ -124,6 +145,10 @@
       font-size: $paragraph-large-regular;
       font-weight: 500;
       line-height: 22px;
+
+      @include breakpoint('mobile') {
+        font-size: $paragraph-medium-regular;
+      }
     }
   }
 }
@@ -143,47 +168,6 @@
 }
 
 /* Product Page */
-
-.flexRowContent .flexRowContent {
-  &--buy-box {
-    border: 1px solid #e5e5e5;
-    border-radius: 4px;
-    padding-top: 24px;
-    padding-bottom: 24px;
-
-    .flexCol--box {
-      display: flex;
-      align-items: center;
-    }
-
-    .flexColChild--box {
-      max-width: 17.5rem;
-      width: 100%;
-    }
-  }
-
-  &--box-unavailable {
-    justify-content: space-between;
-
-    .stretchChildrenWidth {
-      width: 100% !important;
-    }
-  }
-
-  &--box,
-  :global(.vtex-store-components-3-x-subscriberContainer) {
-    max-width: 420px;
-
-    @include mobile {
-      max-width: 100%;
-      width: 100%;
-    }
-  }
-
-  &--priceSavings {
-    display: flex;
-  }
-}
 
 .flexRow--product-name {
   margin-bottom: 8px;
@@ -327,6 +311,12 @@
   &--buyButtonContainer {
     padding: 0 4px;
   }
+
+  &--pdp-add-to-cart {
+    @include breakpoint('mobile') {
+      padding-left: 0.25rem;
+    }
+  }
 }
 
 .flexRowChild--table-cell,
@@ -376,18 +366,35 @@
 
   &--related-products {
     @include container-main;
+
+    @include breakpoint('mobile') {
+      margin-left: 1rem;
+    }
   }
 
   &--pdp-faq {
     background-color: #f6f6f6;
+
+    @include breakpoint('mobile') {
+      margin-bottom: 2.5rem;
+    }
 
     .flexRowContent {
       &--pdp-faq {
         @include container-main;
 
         max-width: 61rem;
+
+        @include breakpoint('mobile') {
+          margin: 0 1rem;
+          width: auto;
+        }
       }
     }
+  }
+
+  &--pdp-rating-mobile {
+    margin-bottom: 0.5rem;
   }
 
   .flexRowContent {
@@ -427,11 +434,10 @@
 
     &--also-view {
       @include container-main;
-    }
 
-    &--productSpecificationItem {
-      @include mobile {
-        height: 0;
+      @include breakpoint('mobile') {
+        margin-left: 1rem;
+        width: auto;
       }
     }
 
@@ -500,6 +506,10 @@
           display: none;
         }
       }
+    }
+
+    &--productSpecificationItem {
+      background-color: #f6f6f6;
     }
   }
 
@@ -657,6 +667,11 @@
     @include container-main;
 
     margin: 0 auto 2.5rem;
+
+    @include breakpoint('mobile') {
+      margin: 0 1rem 2.5rem;
+      width: auto !important;
+    }
   }
 
   &--specBox {
@@ -708,6 +723,10 @@
         font-size: $paragraph-large-regular;
         font-weight: 400;
         line-height: 22px;
+
+        @include breakpoint('mobile') {
+          font-size: $paragraph-medium-regular;
+        }
       }
 
       @include mobile {
@@ -716,10 +735,6 @@
     }
   }
 
-  .flexRow--skuSelectorContainer {
-    min-width: 300px;
-    padding-top: 2rem;
-  }
   // wishlist
   .flexRow--add-to-cart-button {
     :global(.vtex-store-components-3-x-container) {
@@ -748,15 +763,12 @@
   // Shelves end
 
   // PDP start
-  .flexRowContent--boxLine {
-    flex-direction: column;
-  }
-
   .flexCol--product-main-image {
     @include mobile {
       margin-bottom: 1rem;
     }
   }
+
   .flexCol--product-main-infos {
     padding: 0 1.5rem;
 
@@ -1072,13 +1084,16 @@
 
       .flexRow--productSpecificationItem {
         padding: 0 0 1rem 0;
+
         .stretchChildrenWidth:first-child {
           width: 40% !important;
         }
+
         .flexColChild {
           border-radius: 4px;
           padding: 1rem;
         }
+
         &:nth-child(even) {
           .flexColChild {
             background-color: $lightgrey-lighter;
@@ -1095,21 +1110,10 @@
     }
   }
 
-  .flexCol--product-main-top {
-    padding: 0 1.5rem;
-  }
-
   .flexCol--productSpecification {
     .stretchChildrenWidth {
       @include mobile {
         padding: 0 !important;
-      }
-    }
-  }
-  .flexRow--productDescription {
-    .stretchChildrenWidth {
-      @include mobile {
-        padding: 0 0.3rem !important;
       }
     }
   }
