--- a/sass/product/vtex.product-price.scss
+++ b/sass/product/vtex.product-price.scss
@@ -30,6 +30,15 @@
     line-height: 1.25rem;
     align-self: flex-end;
     margin-bottom: 0.5rem;
+
+    @include breakpoint('mobile') {
+      display: flex;
+      align-items: flex-end;
+      margin-bottom: 0.125rem;
+      height: 1.25rem;
+      font-size: $paragraph-large-regular;
+      line-height: 1.25rem;
+    }
   }
 }
 
@@ -40,12 +49,24 @@
     font-weight: 900;
     line-height: 2.5rem;
     color: $blue-dark;
+
+    @include breakpoint('mobile') {
+      height: 1.5rem;
+      font-size: $headline-h3;
+      line-height: 1.5rem;
+    }
   }
 }
 
 .sellingPrice {
   &--pdp {
     margin: 0 2rem 0 0;
+
+    @include breakpoint('mobile') {
+      display: flex;
+      align-items: flex-end;
+      margin-right: 1.25rem;
+    }
   }
 }
 
@@ -57,12 +78,24 @@
     line-height: 1rem;
     display: flex;
     align-items: flex-end;
+
+    @include breakpoint('mobile') {
+      height: 14px;
+      font-size: $paragraph-small-regular;
+      line-height: 14px;
+    }
   }
 }
 
 .listPrice {
   &--pdp {
     margin: 0 1.25rem 0.5rem 0;
+
+    @include breakpoint('mobile') {
+      margin-bottom: 0.25rem;
+      display: flex;
+      align-items: flex-end;
+    }
   }
 }
 
@@ -100,6 +133,12 @@
     color: $primary-default;
     font-size: 16px;
     line-height: 1.25rem;
+
+    @include breakpoint('mobile') {
+      height: 1rem;
+      font-size: $paragraph-medium-regular;
+      line-height: 1rem;
+    }
   }
 
   .currencyContainer {
