--- a/sass/product/vtex.product-quantity.scss
+++ b/sass/product/vtex.product-quantity.scss
@@ -14,6 +14,11 @@
     border-radius: 0.25rem;
     width: 11.25rem;
 
+    @include breakpoint('mobile') {
+      margin-right: 0.25rem;
+      width: auto;
+    }
+
     :global(.vtex-numeric-stepper__input),
     :global(.vtex-numeric-stepper__minus-button),
     :global(.vtex-numeric-stepper__plus-button) {
@@ -21,6 +26,10 @@
       border: none;
       background-color: $white;
       height: 2.5rem;
+
+      @include breakpoint('mobile') {
+        width: 33%;
+      }
     }
   }
 }
