--- a/sass/product/vtex.rich-text.scss
+++ b/sass/product/vtex.rich-text.scss
@@ -6,6 +6,14 @@
   &--pdp-faq-ask-more {
     justify-content: center;
   }
+
+  &--pdp-estimate-shipping {
+    text-align: right;
+
+    @include breakpoint('mobile') {
+      justify-content: flex-end;
+    }
+  }
 }
 
 .paragraph {
@@ -16,6 +24,10 @@
     font-weight: 500;
     line-height: 1rem;
     margin: 0.5rem 2.25rem 1rem 0;
+
+    @include breakpoint('mobile') {
+      margin-right: 1.25rem;
+    }
 
     &::after {
       content: '';
@@ -40,6 +52,14 @@
     text-align: right;
     margin: 0 0.25rem 0 0;
     width: max-content;
+
+    @include breakpoint('mobile') {
+      font-size: $paragraph-medium-regular;
+      line-height: 1rem;
+      height: auto;
+      width: 100%;
+      margin: 0;
+    }
   }
 
   &--pdp-product-info {
@@ -74,6 +94,12 @@
     font-weight: 500;
     line-height: 1.75rem;
     margin: 0 0 2rem;
+
+    @include breakpoint('mobile') {
+      height: 1.5rem;
+      font-size: $headline-h3;
+      line-height: 1.5rem;
+    }
   }
 
   &--specification-title {
@@ -85,7 +111,9 @@
     margin: 0 0 1.25rem;
 
     @include breakpoint('mobile') {
-      text-align: center;
+      font-size: $headline-h3;
+      height: 1.25rem;
+      line-height: 1.25rem;
     }
   }
 
@@ -93,9 +121,14 @@
     height: 1.5rem;
     color: $primary-default;
     font-size: $headline-h4;
+    font-weight: 400;
     line-height: 1.5rem;
     text-align: center;
     margin: 0 0 0.5rem;
+
+    @include breakpoint('mobile') {
+      font-size: $paragraph-large-regular;
+    }
   }
 
   &--pdp-faq-content {
@@ -103,17 +136,29 @@
     font-size: $paragraph-large-regular;
     line-height: 1.5rem;
     margin-top: 0;
+
+    @include breakpoint('mobile') {
+      font-size: $paragraph-medium-regular;
+      line-height: 1.25rem;
+    }
   }
 }
 
 .heading {
-  &--productShelfTitle {
+  &--productShelfTitle,
+  &--product-shelf-title {
     margin: 0 0 1.25rem;
     height: 1.75rem;
     color: $primary-default;
     font-size: $headline-h2;
     font-weight: 500;
     line-height: 1.75rem;
+
+    @include breakpoint('mobile') {
+      height: 1.5rem;
+      font-size: $headline-h3;
+      line-height: 1.5rem;
+    }
   }
 
   &--pdp-faq-title {
@@ -124,5 +169,18 @@
     font-weight: 500;
     line-height: 1.75rem;
     text-align: center;
+
+    @include breakpoint('mobile') {
+      height: 1.5rem;
+      font-size: $headline-h3;
+      line-height: 1.5rem;
+    }
+  }
+}
+
+.wrapper {
+  &--pdp-estimate-shipping {
+    display: flex;
+    justify-content: flex-end;
   }
 }
