--- a/sass/search/vtex.search-result.scss
+++ b/sass/search/vtex.search-result.scss
@@ -152,21 +152,22 @@
     color: #332C32;
     line-height: 19px;
 
-    &::before {
-      content: 'Mostrando ';
-      display: inline;
-      font-size: 16px;
-      font-weight: 400;
-      color: #332C32;
-      line-height: 19px;
-    }
+    // &::before {
+    //   content: 'Mostrando ';
+    //   display: inline;
+    //   font-size: 16px;
+    //   font-weight: 400;
+    //   color: #332C32;
+    //   line-height: 19px;
+    // }
     &::after {
-      content: ' produtos';
-      display: inline;
-      font-size: 16px;
-      font-weight: 400;
-      color: #332C32;
-      line-height: 19px;
+      // content: ' produtos';
+      // display: inline;
+      // font-size: 16px;
+      // font-weight: 400;
+      // color: #332C32;
+      // line-height: 19px;
+      content: ' articoli trovati';
     }
   }
 
@@ -482,7 +483,17 @@
 
   .filter__container {
     margin-bottom: 1.2rem;
+    order: 3;
   }
+
+  .filter__container--selectedFilters, .filter__container--category-2, .filter__container--spedizione {
+    order: 1;
+  }
+
+  .filter__container--priceRange {
+    order: 2;
+  }
+
   .filter__container--title {
     display: none;
   }
@@ -495,6 +506,19 @@
   }
 
   .filter__container--selectedFilters {
+    :global( .vtex-checkbox__label) {
+      font-size: 14px;
+      line-height: 16px;
+      color: #0b1658;
+      font-weight: normal;
+      padding: 6px;
+      padding-right: 26px;
+      width: auto;
+      border: 1px solid;
+      background-color: #F6F6F6;
+      text-transform: capitalize;
+  }
+
     :global(.vtex-checkbox__container) {
       display: none;
     }
@@ -502,7 +526,7 @@
     :global(.vtex-checkbox__line-container) {
       &::after {
         content: url("assets/icons/icon_close.svg");
-        padding-top: 3px;
+        padding-top: 5px;
         transform: translateX(-22px);
       }
     }
@@ -581,6 +605,11 @@
 
   .filtersWrapperMobile--filterMobile {
     height: 40px;
+  }
+
+  .filtersWrapper {
+    display: flex;
+    flex-direction: column;
   }
   // .filtersWrapper {
   //   @include desktop {
