--- a/sass/header/vtex.store-drawer.scss
+++ b/sass/header/vtex.store-drawer.scss
@@ -78,6 +78,23 @@
   // }
 
   .drawerContent--filterMobileDrawer {
-    margin-top: 50px
+    margin-top: 50px;
+    overflow-x: hidden;
+    margin-right: 16px;
+
+    &::-webkit-scrollbar {
+      width: 6px;
+      border-radius: 3px;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: #B8B8B8;
+      border-radius: 3px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: #291660;
+      border-radius: 3px;
+    }
   }
 }
