--- a/sass/vtex.store-components.scss
+++ b/sass/vtex.store-components.scss
@@ -3,3 +3,22 @@
     max-width: 100%;
     padding: 0;
 }
+
+.backToTopButtonActive {
+
+    :global(.vtex-button) {
+        height: 45px;
+        width: 45px;
+    }
+    :global(.vtex-button__label) {
+        content: "";
+        &::after {
+            content: url(/arquivos/back-up-icon.svg);
+            transform: translate(-4px, 1px);
+            height: 45px;
+            width: 45px;
+        }
+    }
+
+}
+
