--- a/sass/header/vtex.disclosure-layout.scss
+++ b/sass/header/vtex.disclosure-layout.scss
@@ -58,6 +58,16 @@
       justify-content: center;
       align-self: center;
       padding-bottom: 8px;
+      &::before {
+        content: "";
+        width: 1.2rem;
+        height: 1.2rem;
+        display: inline-block;
+        background-repeat: no-repeat;
+        background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cpath d='M0 0h40v40H0z'/%3E%3Cg transform='translate(10 10)' stroke='%235D5D5D'%3E%3Cellipse cx='8.02848517' cy='8.01835004' rx='7.52848517' ry='7.51835004'/%3E%3Cpath stroke-linecap='round' d='m13.5480687 13.5309657 5.0178033 5.0113029'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+        background-size: 2.2rem;
+        background-position: -8px -7px;
+      }
       :global(.vtex-store-components-3-x-searchIcon) {
         overflow: visible;
         padding: 0;
@@ -65,6 +75,7 @@
         position: absolute;
         top: 35%;
         transform: translateY(-61%);
+        display: none;
       }
     }
   }
