--- a/sass/product/vtex.store-link.scss
+++ b/sass/product/vtex.store-link.scss
@@ -23,4 +23,25 @@
     line-height: 1.25rem;
     margin-bottom: 2rem;
   }
+
+  &--availability-modal-trigger {
+    text-decoration: none;
+    color: $white;
+    background-color: $blue-active;
+    font-size: $cta-medium;
+    font-weight: 500;
+    line-height: 1rem;
+    text-align: center;
+    padding: 0.75rem 4.25rem;
+    border-radius: 2px;
+
+    &:hover {
+      background-color: $blue-hover;
+      color: $white;
+    }
+
+    @include breakpoint('mobile') {
+      width: 100%;
+    }
+  }
 }
