--- a/sass/home/vtex.slider-layout.scss
+++ b/sass/home/vtex.slider-layout.scss
@@ -35,6 +35,9 @@
       }
     }
   }
+  :global(.vtex-product-summary-2-x-container--summaryComplete) {
+    height: 360px;
+  }
 }
 
 .slideChildrenContainer {
