--- a/sass/home/vtex.store-link.scss
+++ b/sass/home/vtex.store-link.scss
@@ -134,7 +134,7 @@
     }
   }
   &--home-shelf{
-    display: flex;
+    display: none;
     justify-content: flex-end;
     text-decoration: none;
     color: $blue-dark-text;
