--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -2,6 +2,26 @@
 @import '../_variables.scss';
 
 .flexColChild {
+  &--spec-group {
+    .flexRowContent--productSpecificationItem {
+      [data-specification-name='Spedizione gratuita']::after {
+        top: -22px;
+        left: 170px;
+      }
+      @include breakpoint('mobile') {
+        display: flex;
+        border: 1px solid transparent;
+        [data-specification-name='Premium']::after {
+            top: -20px;
+            left: 214px;
+        }
+        [data-specification-name='Spedizione gratuita']::after {
+            top: -38px;
+            left: 183px;
+        }
+      }
+    }
+  }
   &--specificationNameCol {
     [data-specification-name='Premium']::after {
       content: url(https://bricobravo.vtexassets.com/arquivos/ids/155413-22-22?v=637920420622130000&width=75&height=15&aspect=true);
@@ -752,6 +772,8 @@
           padding: 0.5rem 0 0.5rem 1.25rem;
           background-color: #f6f6f6;
         }
+
+
       }
 
       @media (max-width: 1025px) {
@@ -1137,14 +1159,17 @@
         .flexColChild {
           border-radius: 4px;
           padding: 1rem;
+          }
         }
 
         &:nth-child(even) {
           .flexColChild {
             background-color: $lightgrey-lighter;
-          }
+          
         }
       }
+
+
 
       .flexColChild--specificationNameCol {
         color: $darkgrey-medium;
