--- a/sass/product/vtex.product-summary.scss
+++ b/sass/product/vtex.product-summary.scss
@@ -14,11 +14,12 @@
 
   :global(.vtex-product-price-1-x-installments) {
     font-size: 14px;
-    font-weight: 300;
+    font-weight: 500;
     padding: 0 0.8rem;
     margin: 12px;
     text-align: center;
     display: inline-block;
+    color: #4320A8;
   }
 
   &:hover {
