--- a/react/components/CustomMegaMenu/style.css
+++ b/react/components/CustomMegaMenu/style.css
@@ -53,17 +53,17 @@
 }
 
 .megamenu--active {
-  height: auto;
-  max-height: 90vh;
+  height: 100%;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
-  top: 15%;
+  top: 44px;
   left: 95%;
   position: absolute;
   background: #ffffff;
-  transform: translateY(-33px);
+  transform: translate(0px,-45px);
   padding: 10px;
-  width: 68vw;
+  width: 77.5vw;
 }
 
 .bannerSubCategory {
@@ -81,11 +81,11 @@
 
 .submenu-items {
   margin: 0;
-  padding: 15px 30px 40px;
+  padding: 15px 26px 40px;
   display: flex;
-  flex-flow: column wrap;
-  height: 63vh;
-  width: 65vw;
+  flex-flow: wrap;
+  height: 100%;
+  width: 100%;
   overflow: auto;
 }
 
