--- a/sass/vtex.my-account.scss
+++ b/sass/vtex.my-account.scss
@@ -1,3 +1,6 @@
+@import '../_media-queries.scss';
+@import '../_variables.scss';
+
 @media screen and (min-width: 64rem) {
   :global(.vtex-account) {
     width: 1313px;
@@ -12,26 +15,40 @@
 :global(.mt5) {
   :global(.vtex-button.b--transparent.c-action-primary) {
     text-transform: capitalize;
-    color: #291660;
+    color: $blue-active;
 
     &:hover {
       background: none;
-      color: #1b0e41;
+      color: $blue-dark-text;
     }
   }
 }
 
 :global(.vtex-account) {
   .menu {
+    :global(.vtex-account_menu-link) {
+      margin: 0;
+      padding: 14px 0 14px 10px;
+    }
+    
     padding-left: 0;
+    .menuLink {
+      margin: 0;
+      padding-left: 10px;
+      font-weight: 500;
+      color: $primary-default;
+    }
     .menuLinks {
+
+      
       :global(.vtex-account_menu-link.b--action-primary) {
         color: #402493;
         border-left: 4px solid #402493;
       }
 
       :global(.vtex-account_menu-link.b--transparent) {
-        color: #402493;
+        color: $primary-default;
+        font-weight: 500;
       }
     }
   }
@@ -69,7 +86,7 @@
           transition: all ease-in-out 0.3s;
 
           &:hover {
-            background: #1b0e41;
+            background: $blue-dark-text;
           }
         }
       }
@@ -78,7 +95,7 @@
 
   :global(.vtex-pageHeader__container) {
     position: relative;
-
+    padding: 0 20px 20px;
     :global(.vtex-pageHeader__children) {
       position: absolute;
       left: 10px;
@@ -123,6 +140,10 @@
       }
     }
   }
+  .dataEntryLabel{
+    font-size: 12px;
+    font-weight: 600;
+  }
 
   .addressList {
     .addressBox {
@@ -142,13 +163,13 @@
               display: block;
               position: absolute;
               top: 18px;
-              color: #111;
+              color: $darkgrey-dark;
               font-size: 14px;
               font-weight: 500;
               line-height: 16px;
             }
             :global(.address-summary) {
-              color: #111;
+              color: $darkgrey-dark;
               max-width: 200px;
               font-size: 14px;
               letter-spacing: 0;
@@ -163,10 +184,10 @@
               margin-bottom: 20px;
               border: none;
               background: transparent;
-              color: #291660;
+              color: $blue-active;
               font-size: 16px;
               line-height: 19px;
-              font-weight: 500;
+              font-weight: 600;
               text-transform: capitalize;
               :global(.vtex-button__label) {
                 padding: 0;
@@ -231,13 +252,13 @@
       }
 
       :global(.bg-action-primary) {
-        background-color: #291660;
+        background-color: $blue-active;
         text-transform: capitalize;
         height: 40px;
         width: 360px;
 
         &:hover {
-          background-color: #1b0e41;
+          background-color: $blue-dark-text;
         }
       }
     }
@@ -313,11 +334,11 @@
           height: 40px;
           width: 360px;
           border-radius: 2px;
-          background-color: #291660;
-          color: #fff;
+          background-color: $blue-active;
+          color: $white;
 
           &:hover {
-            background-color: #1b0e41;
+            background-color: $blue-dark-text;
           }
         }
         :global(.vtex-button.bg-disabled) {
@@ -347,15 +368,17 @@
   .boxContainer {
     border-radius: 8px;
     max-width: 459px;
+    border-color: #d8d8d8;
   }
 
   :global(.vtex-account__page) {
+    width: 100%;
     :global(.vtex-pageHeader__title) {
-      color: #332c32;
+      color: $primary-default;
       font-size: 28px;
       font-weight: bold;
       letter-spacing: 0;
-      line-height: 33px;
+      line-height: 50px;
     }
 
     .addressEdit {
@@ -371,11 +394,11 @@
         :global(.vtex-button.bg-action-primary) {
           background: #402493 !important;
           border: 2px solid #402493;
-          color: #fff;
+          color: $white;
 
           &:hover {
-            background: #1b0e41 !important;
-            border: 2px solid #1b0e41;
+            background: $blue-dark-text !important;
+            border: 2px solid $blue-dark-text;
           }
         }
       }
@@ -393,7 +416,7 @@
           }
 
           :global(.c-on-disabled) {
-            color: #111;
+            color: $darkgrey-dark;
             font-size: 16px;
             line-height: 23px;
           }
@@ -412,7 +435,7 @@
           padding: 0;
           border: none;
           background: transparent;
-          color: #291660;
+          color: $blue-active;
           position: absolute;
           top: -60px;
           left: 170px;
@@ -432,8 +455,8 @@
         }
 
         :global(.vtex-checkbox__inner-container.b--action-primary) {
-          background: #291660;
-          border: 2px solid #291660;
+          background: $blue-active;
+          border: 2px solid $blue-active;
           width: 20px;
           height: 20px;
         }
@@ -445,9 +468,14 @@
             padding-top: 0;
           }
         }
+        :global(.vtex-checkbox__label){
+          font-size: 14px;
+          line-height: 16px;
+        }
         .passwordBox {
           :global(.vtex-checkbox__line-container) {
             gap: 10px;
+            align-items: baseline;
           }
         }
       }
@@ -476,7 +504,7 @@
 
         &:hover {
           background: transparent;
-          color: #1b0e41;
+          color: $blue-dark-text;
         }
       }
     }
@@ -486,13 +514,13 @@
         width: 280px;
         height: 40px;
         border-radius: 8px;
-        color: #111;
+        color: $darkgrey-dark;
         background: transparent;
-        border: 2px solid #fff;
+        border: 2px solid $white;
         transition: 0.1s ease-in-out;
 
         &:hover {
-          border: 2px solid #111;
+          border: 2px solid $darkgrey-dark;
         }
       }
     }
@@ -504,12 +532,12 @@
 
         :global(.vtex-my-orders-app-3-x-detailsBtn) {
           background: transparent;
-          border: 2px solid #fff;
+          border: 2px solid $white;
           transition: 0.1s ease-in-out;
           width: 180px;
 
           &:hover {
-            border: 2px solid #111;
+            border: 2px solid $darkgrey-dark;
           }
         }
       }
@@ -517,6 +545,23 @@
   }
 
   :global(.wish-list) {
+    :global(.vtex-slider-layout-0-x-sliderLeftArrow--shelf) {
+      left: -36px;
+    }
+    :global(.vtex-slider-layout-0-x-sliderRightArrow--shelf) {
+      right: -36px;
+    }
+    :global(.vtex-flex-layout-0-x-flexColChild--specificationNameCol
+    [data-specification-name='Premium'])::after{
+      top: -10px;
+      left: -4px;
+      position: relative;
+    }
+    :global(.vtex-flex-layout-0-x-flexColChild--specificationNameCol
+    [data-specification-name='Spedizione gratuita'])::after {
+      top: -16px;
+      left: -4px;
+    }
     :global(.vtex-slider-layout-0-x-slideChildrenContainer--shelf) {
       align-items: flex-start;
       padding-top: 10px;
@@ -524,10 +569,12 @@
       :global(.vtex-product-summary-2-x-element) {
         padding: 0 5px 5px;
       }
-
+      :global(.vtex-product-summary-2-x-image){
+        max-height: 170px !important;
+      }
       :global(.vtex-product-summary-2-x-containerNormal) {
-        max-width: 332px !important;
-        height: 360px;
+        max-width: 210px !important;
+        height: 340px;
         position: relative;
         border: none;
         border-radius: 2px;
@@ -544,27 +591,27 @@
             font-weight: 600;
             font-size: 18px;
             line-height: 22px;
-            color: #332c32;
+            color: $primary-default;
             padding-bottom: 10px;
+          }
+          :global(.vtex-store-components-3-x-sellingPrice:nth-child(even)) {
+            color:$blue-dark;
           }
           :global(.vtex-store-components-3-x-listPriceLabel) {
             display: none;
           }
         }
-
-        :global(.vtex-product-price-1-x-installments--productMain-installments) {
-          font-weight: 500;
+        :global(.vtex-product-price-1-x-installments){
           font-size: 14px;
-          line-height: 16px;
-          color: #4320ab;
+          font-weight: 300;
+          padding: 0 0.8rem;
+          margin: 12px;
           text-align: center;
-          margin-bottom: 0;
-          margin-top: 1rem;
+          display: inline-block;
         }
         :global(.vtex-product-summary-2-x-nameContainer) {
           justify-content: center;
           padding-top: 0;
-          padding-bottom: 2rem;
 
           :global(.vtex-product-summary-2-x-brandName) {
             width: 100%;
@@ -575,23 +622,29 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 20px;
-            color: #332c32;
+            color: $primary-default;
             padding-bottom: 10px;
             margin-bottom: 15px;
           }
         }
+
+        :global(.vtex-flex-layout-0-x-flexRow--buyButtonContainer){
+          display: flex;
+          height: 100%;
+          align-items: flex-end;
+        }
         :global(.vtex-button.bg-action-primary) {
-          color: #4320a8;
+          color: $blue-dark;
           border-radius: 4px;
-          border: 1px solid #4320a8;
+          border: 1px solid $blue-dark;
           margin-top: 0.5rem;
           transition: all 0.3s ease;
           min-height: 48px;
           text-transform: uppercase;
           background-color: transparent;
           &:hover {
-            background: #4320a8 !important;
-            color: #fff;
+            background: $blue-dark !important;
+            color: $white;
           }
         }
       }
@@ -602,13 +655,11 @@
     .menu {
       padding: 4rem 1rem !important;
       :global(.vtex-account_menu-link) {
-        padding-left: 0;
-        margin: 0;
+        padding: 14px 0;
         border-bottom: 1px solid #d8d8d8;
       }
       .menuLink {
         padding-left: 0;
-        margin: 0;
         border-bottom: 1px solid #d8d8d8;
       }
     }
@@ -723,7 +774,7 @@
         }
         :global(.vtex-button.bg-action-primary) {
           height: 40px;
-          background-color: #291660;
+          background-color: $blue-active;
         }
         :global(.vtex-button.bg-danger) {
           height: 40px;
@@ -751,6 +802,8 @@
 
           :global(.vtex-pageHeader__title) {
             font-size: 30px;
+            line-height: 20px;
+            padding-top: 24px;
           }
           :global(.vtex-pageHeader__children) {
             position: absolute;
@@ -810,7 +863,7 @@
           padding-right: 0;
           :global(.vtex-button) {
             width: 100%;
-            background-color: #291660;
+            background-color: $blue-active;
           }
           :global(.vtex-button.bg-disabled) {
             background-color: #8e8e8e;
@@ -826,24 +879,39 @@
     }
 
     :global(.wish-list) {
+      :global(.vtex-slider-layout-0-x-sliderLeftArrow--shelf) {
+        left: 0;
+      }
+      :global(.vtex-slider-layout-0-x-sliderRightArrow--shelf) {
+        right: 0;
+      }
       :global(.vtex-slider-layout-0-x-slideChildrenContainer--shelf) {
-        :global(.vtex-product-summary-2-x-containerNormal) {
-          &:hover {
-            height: 360px !important;
-            border: 1px solid red;
-          }
+        :global(.vtex-product-summary-2-x-containerNormal),
+        :global(.vtex-product-summary-2-x-containerNormal):hover{
+          height: 455px;
         }
+        :global(.vtex-product-summary-2-x-image){
+          max-height: 130px !important;
+        }
+        
+      }
+      
+
+      :global(.vtex-flex-layout-0-x-flexColChild--specificationNameCol
+      [data-specification-name='Premium'])::after{
+        content: url(/arquivos/premium-shipping-mobile.svg);
+        top: -48px;
+        left: 84px;
+        
       }
 
       :global(.vtex-flex-layout-0-x-flexColChild--specificationNameCol
-          [data-specification-name='Premium']),
-      :global(.vtex-flex-layout-0-x-flexColChild--specificationNameCol
-          [data-specification-name='Spedizione gratuita']) {
-        &::after {
-          top: -73px;
-          left: 66px;
-        }
+      [data-specification-name='Spedizione gratuita'])::after {
+        content: url(/arquivos/free-shipping-mobile.svg);
+        top: -40px;
+        left: 64px;
       }
+      
 
       :global(.vtex-product-summary-2-x-priceContainer) {
         align-items: start;
@@ -860,10 +928,16 @@
   }
 
   :global(.hover-b-action-primary) {
-    border-color: #1b0e41;
+    border-color: $blue-dark-text;
   }
 
   :global(.hover-b--muted-3) {
     border-color: #8e8e8e;
+  }
+  :global(.vtex-flex-layout-0-x-flexRowContent--summaryPrices){
+    padding-top: 10px;
+  }
+  :global(.vtex-product-summary-2-x-priceContainer) {
+    padding: 10px 0 0;
   }
 }
