[bugfix/21834] Update wishlist icon pdp

--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -334,7 +334,7 @@
     justify-content: flex-end;
   }
   :global(.vtex-wish-list-1-x-fill) {
-    background: url(https://bricobravo.vtexassets.com/arquivos/ids/155411-22-22?v=637920420622130000&width=22&height=22&aspect=true);
+    background: url('assets/icons/icon-wishlist-solid.svg');
     padding-right: 14px;
     padding-bottom: 6px;
   }
