--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -4,7 +4,7 @@
 .flexColChild {
   &--specificationNameCol {
     [data-specification-name='Premium']::after {
-      content: url(https://bricobravo.vtexassets.com/arquivos/ids/155413-22-22?v=637920420622130000&width=75&height=15&aspect=true);
+      content: url('assets/images/premium.png');
       margin: 24px 0 0 22px;
 
       @include breakpoint('mobile') {
@@ -36,15 +36,20 @@
         flex-direction: row;
       }
 
-      [data-specification-name='Premium']::after {
+      [data-specification-name='Premium'] {
+        position: relative;
+      }
+
+      [data-specification-name='Premium']::before {
         content: '';
-        background-image: url(https://bricobravo.vtexassets.com/arquivos/ids/155413-22-22?v=637920420622130000&width=75&height=15&aspect=true);
+        background-image: url('assets/images/premium.png');
         background-size: contain;
         display: inline-block;
         background-repeat: no-repeat;
         height: 1.25rem;
         width: 6.5rem;
         margin: 0 0 0 0.25rem;
+        cursor: pointer;
 
         @include breakpoint('mobile') {
           margin: 0;
@@ -53,6 +58,28 @@
           top: 6px;
         }
       }
+      [data-specification-name='Premium']::after {
+        content: '';
+        background-image: url('assets/icons/info.svg');
+        background-size: contain;
+        display: inline-block;
+        background-repeat: no-repeat;
+        height: 0.75rem;
+        width: 0.75rem;
+        margin: 0 0 0 0.25rem;
+        cursor: pointer;
+        top: 0.25rem;
+        left: 6.5rem;
+        position: absolute;
+
+        @include breakpoint('mobile') {
+          margin: 0;
+          position: relative;
+          left: 0;
+          top: 9px;
+        }
+      }
+
       [data-specification-name='Spedizione gratuita']::before {
         content: '';
         background-image: url("data:image/svg+xml,%3Csvg width='36px' height='19px' viewBox='0 0 36 19' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Ctitle%3E34D203A4-C5C1-45FE-94B5-22AE70F7506E%3C/title%3E%3Cg id='Page-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd' stroke-linecap='round'%3E%3Cg id='D/-3.3-PDP-Multiple-options-' transform='translate(-741.000000, -554.000000)' stroke='%231B0E41'%3E%3Cg id='free-shipping' transform='translate(727.000000, 539.500000)'%3E%3Cg id='icona-spedizione-copy-14' transform='translate(15.000000, 15.500000)'%3E%3Cpath d='M16,14.5 C16,15.880531 14.8808365,17 13.5,17 C12.1191635,17 11,15.880531 11,14.5 C11,13.1200221 12.1191635,12 13.5,12 C14.8808365,12 16,13.1200221 16,14.5 Z' id='Stroke-1' stroke-linejoin='round'%3E%3C/path%3E%3Cline x1='16' y1='15' x2='26' y2='15' id='Stroke-3' stroke-linejoin='round'%3E%3C/line%3E%3Cline x1='5' y1='6.5' x2='0' y2='6.5' id='Path-2'%3E%3C/line%3E%3Cline x1='5' y1='9.5' x2='4' y2='9.5' id='Path-2-Copy'%3E%3C/line%3E%3Cline x1='7' y1='15' x2='11' y2='15' id='Stroke-5' stroke-linejoin='round'%3E%3C/line%3E%3Cpath d='M24,4 L27.6660929,4 C27.6660929,4 28.8203528,4.00785004 29.22429,5.13773253 C29.5459337,6.03473048 30.0090361,7.23788001 30.7496773,9.07164946 L32.8441265,9.07164946 C33.4734294,9.07164946 34,9.4542081 34,10.020981 L34,15 L31.0003227,15' id='Stroke-7' stroke-linejoin='round'%3E%3C/path%3E%3Cpath d='M31,14.5 C31,15.880531 29.8809603,17 28.4997234,17 C27.1184866,17 26,15.880531 26,14.5 C26,13.1200221 27.1184866,12 28.4997234,12 C29.8809603,12 31,13.1200221 31,14.5 Z' id='Stroke-9' stroke-linejoin='round'%3E%3C/path%3E%3Cpath d='M23,10.8594015 L23,1.24223602 C23,0.556182947 22.4800739,0 21.8392716,0 L8.16178411,0 C7.51887041,0 7,0.556182947 7,1.24223602 L7,15' id='Stroke-11' stroke-linejoin='round'%3E%3C/path%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
