--- a/sass/product/vtex.modal-layout.scss
+++ b/sass/product/vtex.modal-layout.scss
@@ -11,7 +11,8 @@
     }
   }
 
-  &--pdp-premium-shipping {
+  &--pdp-premium-shipping,
+  &--pdp-secure-payment {
     width: 100%;
     max-width: 26.5rem;
 
