--- a/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
+++ b/checkout-ui-custom/checkout-ui-custom/checkout6-custom.css
@@ -4080,7 +4080,7 @@ body.v-custom-step-profile .client-pre-email h3.client-pre-email-h span:before, 
   .client-pre-email .pre-email .client-email input {
     margin-top: 8px; }
   .client-pre-email .pre-email .client-email::before {
-    content: "Insira seu e-mail";
+    content: "Inserisci il tuo indirizzo email";
     font-weight: 300;
     font-size: 14px;
     line-height: 18px;
