--- a/sass/product/vtex.flex-layout.scss
+++ b/sass/product/vtex.flex-layout.scss
@@ -204,12 +204,13 @@
     justify-content: center;
   }
 
-  &--pdp-faq {
-    &:last-child {
-      display: flex;
-      justify-content: center;
-    }
-  }
+  // As próximas duas linhas estão comentadas porque a app custom que utiliza elas será implementada no futuro.
+  // &--pdp-faq {
+  //   &:last-child {
+  //     display: flex;
+  //     justify-content: center;
+  //   }
+  // }
 
   &--pdp-faq-form {
     :global(.vtex-styleguide-9-x-container) {
